--- a/app/src/main/res/layout/tip_item.xml
+++ b/app/src/main/res/layout/tip_item.xml
@@ -1,28 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_height="wrap_content"
     android:padding="10dp">
 
-    <TextView
-        android:id="@+id/tip_item_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/signal"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/locate"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"/>
 
     <LinearLayout
+        android:layout_toEndOf="@+id/signal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
+        android:layout_marginStart="10dp"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tip_item_address"
+            android:id="@+id/name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="17sp" />
 
-        <TextView
-            android:id="@+id/tip_item_distance"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                android:id="@+id/address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp" />
+
+            <TextView
+                android:id="@+id/distance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp" />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
