--- a/app/src/main/res/layout/login_user.xml
+++ b/app/src/main/res/layout/login_user.xml
@@ -24,7 +24,8 @@
                 android:layout_marginTop="21dp"
                 android:background="@null"
                 android:drawableBottom="@drawable/line"
-                android:hint="账号"
+                android:hint="手机号"
+                android:inputType="phone"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textStyle="bold" />
