制定路线，地点搜索

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="grey">#999999</color>
     <color name="darkGrey">#666666</color>
     <color name="green">#33CC00</color>
+    <color name="greenPrimary">#00EE00</color>
+    <color name="greenSecondary">#32CD32</color>
 </resources>
