--- a/app/src/main/res/drawable/edit_sharp.xml
+++ b/app/src/main/res/drawable/edit_sharp.xml
@@ -14,11 +14,7 @@
         android:top="7dp" />
     <!-- 设置圆角矩形 -->
     <corners android:radius="7dp" />
-
-    <stroke
-        android:width="5px"
-        android:color="#1199EF" />
-
+    <stroke android:width="1dip" android:color="#fff"/>
     <solid android:color="#ffffff" />
 
 </shape>
