--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -30,8 +30,8 @@
             android:layout_marginBottom="30dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:hint="你想去哪里？"
-            android:gravity="center_vertical"
+            android:hint="制定出行路线"
+            android:gravity="center"
             android:textColor="@color/black"
             android:textColorHint="@color/grey"
             android:background="@drawable/text_sharp"/>
