--- a/app/src/main/res/layout/regime_route.xml
+++ b/app/src/main/res/layout/regime_route.xml
@@ -14,13 +14,14 @@
         android:divider="#FFFFFF"/>
 
     <Button
+        android:id="@+id/regime"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginBottom="15dp"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:text="制定"
+        android:text="制定完成，去选车"
         android:textColor="#fff"
         android:textSize="20sp"
         android:textStyle="bold"
