--- a/app/src/main/res/layout/register_user2.xml
+++ b/app/src/main/res/layout/register_user2.xml
@@ -2,13 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/black_bg">
+    android:background="@drawable/background">
+    <include layout="@layout/title_bar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="200dp"
         android:layout_marginRight="40dp"
         android:orientation="vertical">
 
