--- a/app/src/main/res/layout/regime_route.xml
+++ b/app/src/main/res/layout/regime_route.xml
@@ -5,11 +5,23 @@
     <include
         android:id="@+id/head"
         layout="@layout/title_bar"/>
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/head"
+        android:layout_marginTop="15dp"
+        android:layout_centerHorizontal="true"
+        android:hint="选择出行时间"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:background="@drawable/text_sharp"/>
     <ListView
         android:id="@+id/seg_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/head"
+        android:layout_below="@+id/time"
         android:layout_marginTop="15dp"
         android:divider="#FFFFFF"/>
 
