--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,10 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="我的钱包" />
         <item
+            android:id="@+id/remaining_segment"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="剩余段程" />
+        <item
             android:id="@+id/reply_reimbursement"
             android:icon="@drawable/ic_menu_camera"
             android:title="申请报销" />
