--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -6,13 +6,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/headImage"
+        android:id="@+id/head_image"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="40dp"
         android:src="@drawable/head_image"/>
 
     <TextView
+        android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
