--- a/app/src/main/res/layout/regime_route.xml
+++ b/app/src/main/res/layout/regime_route.xml
@@ -6,22 +6,51 @@
         android:id="@+id/head"
         layout="@layout/title_bar"/>
     <TextView
-        android:id="@+id/time"
+        android:id="@+id/start_time"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_below="@+id/head"
         android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
-        android:hint="选择出行时间"
+        android:hint="选择开始时间"
         android:gravity="center"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
+        android:background="@drawable/text_sharp"/>
+    <TextView
+        android:id="@+id/end_time"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/start_time"
+        android:layout_marginTop="15dp"
+        android:layout_centerHorizontal="true"
+        android:hint="选择结束时间"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:background="@drawable/text_sharp"/>
+    <EditText
+        android:id="@+id/reason"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_below="@+id/end_time"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_centerHorizontal="true"
+        android:hint="请说明出行理由"
+        android:gravity="start|top"
+        android:scrollbars="vertical"
+        android:singleLine="false"
+        android:maxLines="6"
+        android:textColor="@color/black"
+        android:textColorHint="@color/grey"
         android:background="@drawable/text_sharp"/>
     <ListView
         android:id="@+id/seg_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/time"
+        android:layout_below="@+id/reason"
         android:layout_marginTop="15dp"
         android:divider="#FFFFFF"/>
 
