--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -61,18 +61,21 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:background="@drawable/cancel_selector"/>
+
         <Button
             android:id="@+id/finish"
             android:layout_width="300dp"
             android:layout_height="50dp"
-            android:layout_marginBottom="30dp"
+            android:layout_alignTop="@+id/destination"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/cancel_selector"
             android:text="结束行程"
             android:textColor="#fff"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:background="@drawable/cancel_selector"/>
+            android:textStyle="bold" />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
