--- a/app/src/main/res/layout/my_cars.xml
+++ b/app/src/main/res/layout/my_cars.xml
@@ -26,7 +26,7 @@
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:srlEnablePreviewInEditMode="true"
         app:srlPrimaryColor="#444444">
 
@@ -46,13 +46,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="共有车辆"
+        android:text="公有车辆"
         android:textSize="30dp"
         android:textStyle="bold" />
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refreshLayout1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:srlEnablePreviewInEditMode="true"
         app:srlPrimaryColor="#444444">
 
