--- a/app/src/main/res/layout/remaining_segment.xml
+++ b/app/src/main/res/layout/remaining_segment.xml
@@ -2,26 +2,42 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <include
         android:id="@+id/head"
-        layout="@layout/title_bar"/>
+        layout="@layout/title_bar" />
+
     <TextView
-        android:id="@+id/time"
+        android:id="@+id/start_time"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_below="@+id/head"
-        android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
-        android:hint="出行时间"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/text_sharp"
         android:gravity="center"
+        android:hint="开始时间"
         android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        android:background="@drawable/text_sharp"/>
+        android:textColorHint="@color/black" />
+
+    <TextView
+        android:id="@+id/end_time"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/start_time"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/text_sharp"
+        android:gravity="center"
+        android:hint="结束时间"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black" />
+
     <ListView
-        android:id="@+id/seg_list"
+        android:id="@+id/remain_sec_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/time"
+        android:layout_below="@+id/end_time"
         android:layout_marginTop="15dp"
-        android:divider="#FFFFFF"/>
+        android:divider="#FFFFFF" />
 </RelativeLayout>
