--- a/app/src/main/res/layout/segment_item.xml
+++ b/app/src/main/res/layout/segment_item.xml
@@ -10,8 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:clickable="false"
-        android:focusable="false"
+        android:clickable="true"
+        android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
         app:cardCornerRadius="5dp"
         app:cardPreventCornerOverlap="true"
