--- a/app/src/main/res/layout/admin_item.xml
+++ b/app/src/main/res/layout/admin_item.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="wrap_content"
     android:padding="10dp">
 
-        <TextView
-            android:id="@+id/admin_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:layout_marginStart="10dp"
-            android:layout_centerVertical="true"
-            android:textSize="17sp"
-            android:text="管理员1"/>
+    <TextView
+        android:id="@+id/admin_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="管理员1"
+        android:textColor="#000"
+        android:textSize="25sp" />
 </RelativeLayout>
