--- a/app/src/main/res/layout/employee_item.xml
+++ b/app/src/main/res/layout/employee_item.xml
@@ -27,7 +27,7 @@
 
             <TextView
                 android:id="@+id/employee_name"
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="张三"
@@ -35,7 +35,7 @@
                 android:textStyle="bold" />
 
             <LinearLayout
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <ImageView
